platform-engineering-playbook/cloud-native-python-app/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: emergingtechnologies2016/python-app:v2
          ports:
            - containerPort: 5000
